--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -61,8 +61,7 @@
                   <hr>
                   <br>
                   <li>
-                  <p align="justify">Leobardo Campos-Macías, David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, “<b>A Hybrid Method for Online Trajectory Planning of Mobile Robots in Cluttered Environments</b>”. <i>IEEE Robotics and Automation Letters</i>, 2017.<br>
-                     [<a style="color:blue" href="publications/ral2017.pdf">pdf</a> | <a style="color:blue" href="publications/ral2017.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=DJ1IZRL5t1Q&t=1s">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1908.08493">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/7822897">publisher link</a>]
+                  <p align="justify"><b>Rodrigo Aldana-López</b>, Eduardo Sebastián, Rosario Aragüés, Eduardo Montijano, Carlos Sagüés, “<b>Distributed outer approximation of the intersection of ellipsoids</b>”. <i>IEEE Control Systems Letters</i>, 2023.<br> [<a style="color:blue" href="https://arxiv.org/pdf/2305.15172">pdf</a> | <a style="color:blue" href="publications/lcss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/10136818">publisher link</a>]
                   </p>
                   </li>
                   <br>
