--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -91,7 +91,7 @@
                   <hr>
                   <br>
                   <li>
-                     <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Rosario Aragüés, Carlos Sagüés, “<b>Dynamic consensus with prescribed convergence time for multi-leader formation tracking</b>”. <i>IEEE Control Systems Letters</i>, 2022.<br> [<a style="color:blue" href="publications/lcss2022.pdf">pdf</a> | <a style="color:blue" href="publications/lcss2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9792300">publisher link</a>]
+                     <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Rosario Aragüés, Carlos Sagüés, “<b>Dynamic consensus with prescribed convergence time for multi-leader formation tracking</b>”. <i>IEEE Control Systems Letters</i>, 2022. <a style="color:teal">Presented at 61th IEEE Conference on Decision and Control (CDC)</a><br> [<a style="color:blue" href="publications/lcss2022.pdf">pdf</a> | <a style="color:blue" href="publications/lcss2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9792300">publisher link</a>]
                      </p>
                   </li>
                   <br>
@@ -119,7 +119,7 @@
                   </li>
                   <br>
                   <li>
-                     <p align="justify">Hernan Haimovich, Richard Seeber, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, “<b>Differentiator for Noisy Sampled Signals with Best Worst-Case Accuracy</b>”. <i>IEEE Control Systems Letters</i>, 2021.<br>[<a style="color:blue" href="publications/icsl2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.05320">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/9448332">publisher link</a>]
+                     <p align="justify">Hernan Haimovich, Richard Seeber, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, “<b>Differentiator for Noisy Sampled Signals with Best Worst-Case Accuracy</b>”. <i>IEEE Control Systems Letters</i>, 2021. <a style="color:teal">Presented at 60th IEEE Conference on Decision and Control (CDC)</a><br>[<a style="color:blue" href="publications/icsl2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.05320">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/9448332">publisher link</a>]
                      </p>
                   </li>
                   <br>
