--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -7,7 +7,7 @@
   <h1>Robust Affine Formation Tracking - video</h1>
 
   <video width="640" height="360" controls>
-    <source src="utils/affinevideo.mp4" type="video/mp4">
+    <source src="affinevideo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
