--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -13,7 +13,7 @@
     </video>
 
     <p style="width: 100%; box-sizing: border-box; padding: 10px; text-align: justify;"> <!-- Make the paragraph occupy the full width of its container (the same as the video) and justify the text -->
-      Results from the work "Robust Affine Formation Tracking". Blue circles represent leader positions, red circles represent follower positions and blue crosses represent the positions of the followers in the target configuration given the current positions of the leaders. The agents manage to get to their positions regardless of the persistent motion of the leaders.
+      Results from the work "Robust Affine Formation Tracking". Blue circles represent the current leader positions. Red circles represent the current follower positions. Blue crosses represent the positions of the followers in the reference target configuration given the current positions of the leaders. The agents manage to get to their reference positions regardless of the persistent motion of the leaders.
     </p>
   </div>
 </body>
