--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -240,6 +240,11 @@
                   <div class="pub_list">
                   <ol reversed>
                      <li>
+                        <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Triggered Consensus for Continuous-Time Distributed Estimation</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/ifac2023a.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323010157">publisher link</a>]
+                        </p>
+                     </li>
+                     <li>
                         <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
                            [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
                         </p>
