--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -241,10 +241,29 @@
                   <div class="pub_list">
                   <ol reversed>
                      <li>
+                        <p align="justify">Hernan Haimovich, <b>Rodrigo Aldana-López</b>, Richard Seeber, David Gómez-Gutiérrez, “<b>Implementing prescribed-time convergent control: sampling and robustness</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/ifac2023b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323022735">publisher link</a>]
+                        </p>
+                     </li>
+ 					 <br>
+                     <li>
+                        <p align="justify">P. {De Villeros}, <b>Rodrigo Aldana-López</b>, J.D. Sánchez-Torres, M. Defoort, M. Djemai, A. Loukianov, “<b>Distributed predefined-time optimization in formation control under switching topologies</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/ifac2023c.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323017962">publisher link</a>]
+                        </p>
+                     </li>
+ 					 <br>
+                     <li>
+                        <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Distributed differentiation with noisy measurements for exact dynamic consensus</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/ifac2023d.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323015045">publisher link</a>]
+                        </p>
+                     </li>
+ 					 <br>
+                     <li>
                         <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Triggered Consensus for Continuous-Time Distributed Estimation</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
                            [<a style="color:blue" href="publications/ifac2023a.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323010157">publisher link</a>]
                         </p>
                      </li>
+ 					 <br>
                      <li>
                         <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference</i>, 2022.<br>
                            [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
