--- a/publications.html
+++ b/publications.html
@@ -66,6 +66,10 @@
                   <h3 class="big">Multi-agent systems</h3>
                   <hr>
                   <br>
+                        <p align="justify">P. De Villeros, <b>Rodrigo Aldana-López</b>, J.D. Sánchez-Torres, M. Defoort, M. Djemai, A. Loukianov, “<b>Distributed predefined-time optimization in formation control under switching topologies</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/ifac2023c.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323017962">publisher link</a>]
+                        </p>
+                  <br>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Eduardo Sebastián, Rosario Aragüés, Eduardo Montijano, Carlos Sagüés, “<b>Distributed outer approximation of the intersection of ellipsoids</b>”. <i>IEEE Control Systems Letters</i>, 2023. <a style="color:teal">Presented at 62th IEEE Conference on Decision and Control (CDC).</a><br> [<a style="color:blue" href="https://arxiv.org/pdf/2305.15172">pdf</a> | <a style="color:blue" href="publications/lcss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/10136818">publisher link</a>]
                   </p>
                   <br>
@@ -99,6 +103,10 @@
                   <h3 class="big">Asynchronous perception in robot control</h3>
                   <hr>
 				  <br>
+                        <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Triggered Consensus for Continuous-Time Distributed Estimation</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/ifac2023a.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323010157">publisher link</a>]
+                        </p>
+				  <br>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>PLATE: A perception-latency aware estimator</b>”. <i>ISA Transactions</i>, 2023.<br>
                      [<a style="color:blue" href="publications/isa2023.txt">bibtex</a> | <a style="color:blue" href="https://doi.org/10.1016/j.isatra.2023.08.013">publisher link (open access)</a>]
                   </p>
@@ -121,6 +129,10 @@
                   <br>
                   <h3 class="big">Exact differentiation algorithms</h3>
                   <hr>
+                  <br>
+                        <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Distributed differentiation with noisy measurements for exact dynamic consensus</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/ifac2023d.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323015045">publisher link</a>]
+                        </p>
 			      <br>
                   <p align="justify">David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Richard Seeber, Marco Tulio Angulo, Leonid Fridman, “<b>An arbitrary-order exact differentiator with predefined convergence time bound for signals with exponential growth bound</b>”. <i>Automatica</i>, 2023.<br>[<a style="color:blue" href="publications/automatica2023.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.00822">arxiv</a> | <a style="color:blue" href="https://doi.org/10.1016/j.automatica.2023.110995">publisher link</a>]
                   </p>
@@ -136,6 +148,14 @@
                   <br>
                   <h3 class="big">Fixed-time stability in control systems</h3>
                   <hr>
+				  <br>
+                        <p align="justify">Hernan Haimovich, <b>Rodrigo Aldana-López</b>, Richard Seeber, David Gómez-Gutiérrez, “<b>Implementing prescribed-time convergent control: sampling and robustness</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/ifac2023b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323022735">publisher link</a>]
+                        </p>
+				  <br>
+                        <p align="justify"><b>Rodrigo Aldana-López</b>, Richard Seeber, Hernan Haimovich, David Gómez-Gutiérrez, “<b>Designing Controllers with Predefined Convergence-Time Bound Using Bounded Time-Varying Gains</b>”. <i>In: Oliveira, T.R., Fridman, L., Hsu, L. (eds) Sliding-Mode Control and Variable-Structure Systems. Studies in Systems, Decision and Control, vol 490. Springer</i>, 2023.<br>
+                           [<a style="color:blue" href="publications/smcvss2023.pdf">pdf</a> | <a style="color:blue" href="publications/smcvss2023.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2311.02473">arxiv</a> | <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-37089-2_3">publisher link</a>]
+                        </p>
                   <br>
                   <p align="justify"><b>Rodrigo Aldana-López</b>, Richard Seeber, Hernan Haimovich, David Gómez-Gutiérrez, “<b>On inherent limitations in robustness and performance for a class of prescribed-time algorithms</b>”. <i>Automatica</i>, 2023.<br>[<a style="color:blue" href="publications/automatica2023a.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2023a.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2205.02528">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S000510982300448X?via%3Dihub">publisher link</a>]
                   </p>
