--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -247,7 +247,7 @@
                      </li>
  					 <br>
                      <li>
-                        <p align="justify">P. {De Villeros}, <b>Rodrigo Aldana-López</b>, J.D. Sánchez-Torres, M. Defoort, M. Djemai, A. Loukianov, “<b>Distributed predefined-time optimization in formation control under switching topologies</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
+                        <p align="justify">P. De Villeros, <b>Rodrigo Aldana-López</b>, J.D. Sánchez-Torres, M. Defoort, M. Djemai, A. Loukianov, “<b>Distributed predefined-time optimization in formation control under switching topologies</b>”. <i>22nd, IFAC World Congress</i>, 2023.<br>
                            [<a style="color:blue" href="publications/ifac2023c.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896323017962">publisher link</a>]
                         </p>
                      </li>
