--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -8,7 +8,7 @@
     <h1>Robust Affine Formation Tracking - video</h1>
 
     <video width="640" height="360" controls style="display: block;"> <!-- Make sure the video fills the full width of its container -->
-      <source src="affinevideo.mp4" type="video/mp4">
+      <source src="affinevideoV2.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
