--- a/utils/affinevideo.html
+++ b/utils/affinevideo.html
@@ -5,7 +5,9 @@
 </head>
 <body>
   <div style="width: 640px; margin: 0 auto; font-family: 'Arial', sans-serif;"> <!-- Set the width to match the video's width and center the container -->
-    <h1>Homogeneous Observer-Based Affine Formation Tracking - video</h1>
+    <div class="center">
+  <h1>Homogeneous Observer-Based Affine Formation Tracking - video</h1>
+</div>
 
     <video width="640" height="360" controls style="display: block;"> <!-- Make sure the video fills the full width of its container -->
       <source src="affinevideoV2.mp4" type="video/mp4">
