--- a/publicationsDate.html
+++ b/publicationsDate.html
@@ -57,6 +57,72 @@
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
                <ol reversed>
+               
+                  <h3 class="big">2025</h3>
+<hr>
+<br>
+
+<li>
+<p align="justify"><b>Rodrigo Aldana-López</b>, R. Seeber, H. Haimovich, D. Gómez-Gutiérrez, “<b>Optimal robust exact first-order differentiators with Lipschitz-continuous output</b>”. <i>IEEE Transactions on Automatic Control</i>, 2025.<br>
+   [<a style="color:blue" href="publications/tac2025.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/10943119">publisher link</a>]
+</p>
+</li>
+<br>
+
+<li>
+<p align="justify">E. Sebastián, <b>Rodrigo Aldana-López</b>, R. Aragüés, E. Montijano, C. Sagüés, “<b>Distributed Discrete-Time Dynamic Outer Approximation of the Intersection of Ellipsoids</b>”. <i>IEEE Transactions on Automatic Control</i>, 2025.<br>
+   [<a style="color:blue" href="publications/tac2025a.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/10879361">publisher link</a>]
+</p>
+</li>
+<br>
+
+<li>
+<p align="justify"><b>Rodrigo Aldana-López</b>, R. Aragüés, C. Sagüés, “<b>Quasi-exact dynamic average consensus under asynchronous communication and symmetric delays</b>”. <i>ISA Transactions</i>, 2025.<br>
+   [<a style="color:blue" href="publications/isa2025.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0019057825004409">publisher link</a>]
+</p>
+</li>
+<br>
+
+<li>
+<p align="justify">I. Perez-Salesa, <b>Rodrigo Aldana-López</b>, C. Sagüés, “<b>ODEFTC: Optimal Distributed Estimation based on Fixed-Time Consensus</b>”. <i>Information Fusion</i>, 2025.<br>
+   [<a style="color:blue" href="publications/infus2025.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S156625352400561X">publisher link</a>]
+</p>
+</li>
+<br>
+
+<li>
+<p align="justify"><b>Rodrigo Aldana-López</b>, D. Gómez-Gutiérrez, E. Usai, H. Haimovich, “<b>Exact Leader Estimation: A New Approach for Distributed Differentiation</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2025.<br>
+   [<a style="color:blue" href="publications/ijrnc2025.txt">bibtex</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.7901">publisher link</a>]
+</p>
+</li>
+<br>
+
+<li>
+<p align="justify"><b>Rodrigo Aldana-López</b>, M. Aranda, R. Aragüés, C. Sagüés, “<b>Homogeneous Observer-Based Affine Formation Tracking</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2025.<br>
+   [<a style="color:blue" href="publications/ijrnc2025a.txt">bibtex</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/10.1002/rnc.70308">publisher link</a>]
+</p>
+</li>
+<br>
+
+<h3 class="big">2024</h3>
+<hr>
+<br>
+
+<li>
+<p align="justify">I. Perez-Salesa, <b>Rodrigo Aldana-López</b>, C. Sagüés, “<b>Bounding Uncertainty in State Estimation Under Dynamic Event-Triggered Communication</b>”. <i>IEEE Transactions on Systems, Man, and Cybernetics: Systems</i>, 2024.<br>
+   [<a style="color:blue" href="publications/tsmc2024.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/10704710">publisher link</a>]
+</p>
+</li>
+<br>
+
+<li>
+<p align="justify">P. De Villeros, <b>Rodrigo Aldana-López</b>, J.D. Sánchez-Torres, M. Defoort, M. Djemai, “<b>Robust fixed-time distributed optimization with predefined convergence-time bound</b>”. <i>Journal of the Franklin Institute</i>, 2024.<br>
+   [<a style="color:blue" href="publications/jfi2024.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0016003224004095">publisher link</a>]
+</p>
+</li>
+<br>
+
+               
                   <h3 class="big">2023</h3>
                   <hr>
 				  <br>
