--- a/education.html
+++ b/education.html
@@ -47,32 +47,53 @@
                <h1 id="career">Education</h1>
                <br><br>
                <ul class="timeline">
-                  <li class="timeline
-                     ">
-                     <div class="timeline-image">
-                        <img class="img-circle img-responsive" src="assets/education/unizar.png" alt="cinvestav_logo">
-                     </div>
-                     <div class="timeline-panel">
-                        <div class="timeline-heading">
-                           <h4>2019 - Today</h4>
-                           <h3>
-                              <p class="blue-text" align="justify"><span class="big">Ph.D. in Systems Engineering and Computer Science</span></p>
-                           </h3>
-                        </div>
-                        <div class="timeline-body">
-                           <p class="text-muted">
-                           <p>University of Zaragoza</p>
-                           </p>
-                           <div class="parent">
-                              <p class="text-muted">
-                              <p align="justify">Thesis Title: <span class="color-font">Perception latency scheduling in control and coordination of multi-robot systems</span></p>
-                              </p>
-                              <p class="text-muted" align="justify">Thesis Advisors: <a  class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">Prof. Carlos Sagüéz</a> and <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">Dr. Rosario Aragüés.</a>
-                              </p>
-                           </div>
-                        </div>
-                     </div>
-                  </li>
+                  
+                  <li class="timeline">
+   <div class="timeline-image">
+      <img class="img-circle img-responsive" src="assets/education/unizar.png" alt="unizar_logo">
+   </div>
+   <div class="timeline-panel">
+      <div class="timeline-heading">
+         <h4>2019 - 2024</h4>
+         <h3>
+            <p class="blue-text" align="justify">
+               <span class="big">Ph.D. in Systems Engineering and Computer Science</span>
+            </p>
+         </h3>
+      </div>
+      <div class="timeline-body">
+         <p class="text-muted">University of Zaragoza (UNIZAR)</p>
+
+         <div class="parent">
+            <p class="text-muted" align="justify">
+               Thesis Title:
+               <span class="color-font">
+                  Perception latency scheduling in control and coordination of multi-robot systems
+               </span>
+            </p>
+
+            <p class="text-muted" align="justify">
+               Thesis Advisors:
+               <a class="several" href="https://i3a.unizar.es/es/investigadores/carlos-sagues-blazquiz">
+                  Prof. Carlos Sagüés
+               </a>
+               and
+               <a class="several" href="https://i3a.unizar.es/es/investigadores/rosario-aragues-munoz">
+                  Dr. Rosario Aragüés
+               </a>.
+            </p>
+
+            <p class="text-muted" align="justify">
+               Awards: Extraordinary Doctoral Award (UNIZAR);
+               Accessit for Best PhD Thesis in Control Systems (CEA);
+               Best European PhD Thesis in Control Systems (EECI).
+            </p>
+         </div>
+      </div>
+   </div>
+</li>
+
+                  
                   <li class="
                      timeline-inverted
                      ">
