--- a/patents.html
+++ b/patents.html
@@ -230,6 +230,74 @@
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
                   <ol reversed>
+                  
+
+<li>
+  <p align="justify">
+    <b>Rodrigo Aldana-López</b>, Leobardo Campos-Macías, SEC Chavarin, Hector Caballero Maruri,
+    “<b>Methods and apparatus to distribute workloads in server farms based on temperature</b>”, 2025. <br>
+    US Patent Application <b>19/247,302</b> (published as
+    <a style="color:blue" href="https://patents.google.com/patent/US20250321787A1/en">US20250321787 A1</a>).
+  </p>
+</li>
+<br>
+
+<li>
+  <p align="justify">
+    <b>Rodrigo Aldana-López</b>, Leobardo Campos Macías, David Gómez Gutiérrez, S. B. Shrestha,
+    “<b>Neuromorphic unit for parallel neural network workloads</b>”, 2025. <br>
+    US Patent Application <b>19/190,113</b> (pending).
+  </p>
+</li>
+<br>
+
+<li>
+  <p align="justify">
+    <b>Rodrigo Aldana-López</b>, David Gómez Gutiérrez, Leobardo Campos-Macías,
+    “<b>Dynamic neural network scheduling for visual tasks</b>”, 2025. <br>
+    US Patent Application <b>19/060,350</b> (pending).
+  </p>
+</li>
+<br>
+
+<li>
+  <p align="justify">
+    L. R. Fernandez, <b>Rodrigo Aldana-López</b>, J. F. Leon, David Gómez Gutiérrez, D. G. Aguirre,
+    “<b>Controller parameter adaptation for non-differentiable communication conditions</b>”, 2025. <br>
+    US Patent Application <b>19/065,013</b> (pending).
+  </p>
+</li>
+<br>
+
+<li>
+  <p align="justify">
+    M. J. Franco, <b>Rodrigo Aldana-López</b>, J. C. Z. Esquivel, L. Nachman,
+    “<b>Hardware acceleration of Clifford algebraic operations</b>”, 2025. <br>
+    US Patent Application <b>19/047,303</b> (pending).
+  </p>
+</li>
+<br>
+
+<li>
+  <p align="justify">
+    J. Z. Esquivel, A. J. Pita, D. G. Aguirre, J. F. Leon, <b>Rodrigo Aldana-López</b>, E. M. Garcia,
+    “<b>Differential kinematics control using conformal geometric entity modeling</b>”, 2025. <br>
+    US Patent Application <b>19/001,854</b> (pending).
+  </p>
+</li>
+<br>
+
+<li>
+  <p align="justify">
+    H. C. Maruri, A. I. Von Borstel, J. C. Z. Esquivel, P. L. Meyer, <b>Rodrigo Aldana-López</b>, Leobardo Campos Macías,
+    “<b>User identification with audio earbuds</b>”, 2025. <br>
+    US Patent Application <b>18/932,324</b> (pending).
+  </p>
+</li>
+<br>
+
+
+                  
                   <li>
                      <p align="justify">David Gomez Gutierrez, Jose Parra Vilchis, Rafael De La Guardia Gonzalez, <b>Rodrigo Aldana-López</b>, Leobardo Campos Macias, “<b>Dynamic generation of restricted flight zones for drones</b>”, 2021. <br>Published as: 
                         <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=3&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210204&CC=US&NR=2021034078A1&KC=A1">US2021034078 (A1)</a>, 
