--- a/patents.html
+++ b/patents.html
@@ -54,6 +54,16 @@
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
                   <ol reversed>
+                  <li>
+  <p align="justify">
+    Feng Xue, Mustafa Akdeniz, Seong-youp John Suh, Jingwen Bai, Shu-ping Yeh, <b>Rodrigo Aldana-López</b>, Eduardo Alban, David Arditti Ilitzky, Philippe Auzas, Jonathan Byrne, Leobardo Campos Macias, Mark Davis, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Timo Huusari, Bradley Alan Jackson, Ranganadh Karella, Sreenivas Kasturi, Mengkun Ke, Ching-yu Liao, Tiefeng Shi, Shilpa Talwar, Daniel Tong, Candy Yiu, “<b>Unmanned aerial vehicle communication</b>”, 2024. <br>
+    Published as:
+    <a style="color:blue" href="https://patents.google.com/patent/US11929802B2/en">US11929802 (B2)</a>.
+  </p>
+</li>
+<br>
+
+                  
                      <li>
                         <p align="justify">Dave Cavalcanti, David Gómez Gutiérrez, Leobardo Campos Macias, Linda Patricia Osuna Ibarra, <b>Rodrigo Aldana-López</b>, David Arditti Ilitzky, Humberto Caballero Barragan, “<b>Wireless feedback control loops with neural networks to predict target system states</b>”, 2023. <br>Published as: 
                            <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20230110&DB=&locale=en_EP&CC=US&NR=11551058B2&KC=B2&ND=4">US11551058 (B2)</a>, 
